--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,6 +1,6 @@
 body {
-  background: #1488CC;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2B32B2, rgb(57, 58, 59));  /* Chrome 10-25, Safari 5.1-6 */
+  background: rgb(12, 18, 22);  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, rgb(15, 15, 15), rgb(57, 58, 59));  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #2B32B2, rgb(1, 18, 27)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
