--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -4,9 +4,11 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title d-flex justify-content-between align-items-center">
-          {{ title }} <a href="/notes/edit/{{_id}}"><i class="fas fa-edit"></i></a>
+          {{ nombre }} <a href="/notes/edit/{{_id}}"><i class="fas fa-edit"></i></a>
         </h4>
-        <p>{{ description }}</p>
+        <p>{{ tel }}</p>
+        <p>{{ email }}</p>
+        <p>{{ sintomas }}</p>
         <!-- DELETE REQUEST -->
         <form action="/notes/delete/{{_id}}?_method=DELETE" method="POST">
           <input type="hidden" name="_method" value="DELETE">
