--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,15 +1,21 @@
 <div class="col-md-4 mx-auto">
   <div class="card text-center">
     <div class="card-header">
-      <h3>New Note</h3>
+      <h3>Nueva Cita</h3>
     </div>
     <div class="card-body">
       <form action="/notes/new-note" method="POST">
         <div class="form-group">
-          <input type="text" name="title" class="form-control" placeholder="Title" autofocus/>
+          <input type="text" name="nombre" class="form-control" placeholder="Nombre del paciente" autofocus/>
+        </div>
+         <div class="form-group">
+          <input type="text" name="tel" class="form-control" placeholder="Numero de Telefono" autofocus/>
+        </div>
+         <div class="form-group">
+          <input type="text" name="email" class="form-control" placeholder="Email" autofocus/>
         </div>
         <div class="form-group">
-          <textarea name="description" class="form-control" placeholder="Description"></textarea>
+          <textarea name="sintomas" class="form-control" placeholder="Sintomas"></textarea>
         </div>
         <div class="form-group">
           <button class="btn btn-primary btn-block" type="submit">
